# DEDEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  FRESH_MACHINE_SETUP.md  HANDOFF_2026-03-13.md  NEXT_STEPS.md  README.md
.github/workflows/: deploy-web.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/cookieontheroofx/: MainActivity.java
codex/cloud/: README.md  maintenance-web-build.sh  setup-web-build.sh
docs/mesh_slicing/: context_injection.md  implementation_checklist.md  prototype_scope.md  runbook.md  technical_design.md  validation_cases.md  viewer_spec.md
prototypes/: README.md
prototypes/roofless-prototype/: README.md  STATUS.md
src/core/: contour_builder.cpp  contour_builder.hpp  fragment_mesh.cpp  fragment_mesh.hpp  fragment_rebuild.cpp  fragment_rebuild.hpp  mesh_types.cpp  mesh_types.hpp  plane_math.cpp  plane_math.hpp  procedural_cube_generator.cpp  procedural_cube_generator.hpp  region_builder.cpp  region_builder.hpp  slice_intersections.cpp  slice_intersections.hpp  surface_types.cpp  surface_types.hpp  triangulation.cpp  triangulation.hpp
src/engine/: geometry.cpp  geometry.hpp  gl_api.cpp  gl_api.hpp  renderer.cpp  renderer.hpp  types.hpp
src/game/: simulation.cpp  simulation.hpp
src/platform/android/: platform_config.cpp
src/platform/shared/: platform_config.hpp  sdl_main.cpp
src/platform/web/: platform_config.cpp
src/platform/windows/: platform_config.cpp
src/validation/: scenario_runner.cpp  scenario_runner.hpp  validation_runner_main.cpp
src/viewer/: debug_draw.cpp  debug_draw.hpp  imgui_panels.cpp  imgui_panels.hpp  main.cpp  main.hpp  viewer_main.cpp
tests/: mesh_slicing_validation_tests.cpp  simulation_tests.cpp
tools/: build_web.ps1  build_web.sh  build_windows_ascii_path.bat  setup_web_toolchain.sh
web/: shell.html
